# LQR

./: .gitignore  CMakeLists.txt  readme.md
include/: KinematicModel.h  LQR.h  Reference_path.h  kinematic_model.h  lqr.h  matplotlibcpp.h  pid_control.h  reference_path.h
src/: KinematicModel.cpp  LQR.cpp  Reference_path.cpp  kinematic_model.cpp  lqr.cpp  main.cpp  main_pid.cpp  pid_control.cpp  reference_path.cpp
